[gd_scene load_steps=2 format=3 uid="uid://c6r1hkpacxat3"]

[ext_resource type="Script" path="res://Splash_Screens/game_over.gd" id="1_c60hu"]

[node name="Game_Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c60hu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.360784)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -386.0
offset_top = 157.0
offset_right = 387.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "You Didn't Survive :("

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -321.0
offset_right = 182.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Restart_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Restart"

[node name="Main_Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "MAIN MENU"

[node name="QUIT" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
